--- a/client/src/components/components-style.css
+++ b/client/src/components/components-style.css
@@ -4,7 +4,7 @@
   position: sticky top;
   text-align: center;
   font-size: 16px;
-  background-color: #e49b15a9;
+  background-color: #caf0f8;
   color: black;
   padding-top: 1.5vh;
 }
