--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -1,28 +1,59 @@
-@import url(https://fonts.googleapis.com/css?family=Khula:700);
 body {
-  background: #111;
+  background: lightgrey;
+  color: black;
 }
-.hidden {
-  opacity: 0;
+
+html {
+  height: 100%;
 }
-.console-container {
-  font-family: Khula;
-  font-size: 4em;
-  text-align: center;
-  height: 200px;
-  width: 600px;
-  display: block;
-  position: absolute;
-  color: white;
-  top: 0;
+
+body {
+  margin: 0;
+}
+
+.bg {
+  animation: slide 6s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #03045e 50%, #caf0f8 50%);
   bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
+  left: -50%;
+  opacity: 0.5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
 }
-.console-underscore {
-  display: inline-block;
-  position: relative;
-  top: -0.14em;
-  left: 10px;
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 12s;
+}
+
+.bg3 {
+  animation-duration: 16s;
+}
+
+.content {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 0.25em;
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  left: 50%;
+  padding: 10vmin;
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-family: monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(25%);
+  }
 }
