--- a/client/src/components/components-style.css
+++ b/client/src/components/components-style.css
@@ -8,3 +8,26 @@
   color: black;
   padding-top: 1.5vh;
 }
+
+.image-item {
+  display: flex;
+  margin: 10px 0;
+}
+.image-item__btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.image-upload {
+  height: 10vh;
+  min-width: 98%;
+  background: #caf0f84d;
+  border-radius: 10px;
+  border: 2px solid #03045e;
+}
+
+.image-upload:hover {
+  background: #03055e38;
+  cursor: pointer;
+}
