--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -13,7 +13,7 @@ body {
 
 .bg {
   animation: slide 6s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #03045e 50%, #caf0f8 50%);
+  background-image: linear-gradient(-60deg, #e2eafc 50%, #c1d3fe 50%);
   bottom: 0;
   left: -50%;
   opacity: 0.5;
@@ -33,7 +33,7 @@ body {
 }
 
 .content {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.644);
   border-radius: 0.25em;
   box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
